Proper linking to threading lib on Apple and Linux
Have a `bin/` dir for samples/examples output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,14 @@ else()
 endif()
 
 # === Platform & Toolchain Configuration ===
+include(GNUInstallDirs)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(SAMPLES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/samples)
+set(BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-# --- liteseq Library ---
+
+# --- log Library ---
 add_library(log
   ${SRC_DIR}/log.c
 )
@@ -75,21 +79,43 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
   add_compile_definitions(RELEASE)
 endif()
 
-if(APPLE)  # true for macOS/iOS simulators, etc.
-  find_library(DISPATCH_LIB NAMES dispatch)
-  if(DISPATCH_LIB)
-    message(STATUS "Using Grand Central Dispatch (GCD) for threading on Apple platforms.")
-    target_link_libraries(log PRIVATE "${DISPATCH_LIB}")
+# ===================== Threading Configuration ======================
+
+message("Looking for an appropriate threading library...")
+if (APPLE)
+  # Log the start of macOS SDK retrieval
+  message(STATUS "Retrieving macOS SDK path using xcrun...")
+
+  # Get the macOS SDK path dynamically
+  execute_process(
+    COMMAND xcrun --show-sdk-path
+    OUTPUT_VARIABLE MACOSX_SDK_PATH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+
+  # Check if the macOS SDK path was successfully retrieved
+  if (NOT MACOSX_SDK_PATH)
+    message(FATAL_ERROR "Failed to retrieve macOS SDK path. Ensure that Xcode tools are installed and configured.")
   else()
-    message(FATAL_ERROR "Grand Central Dispatch (libdispatch) not found.")
+    # Log the retrieved macOS SDK path
+    message(STATUS "Using macOS SDK path: ${MACOSX_SDK_PATH}")
+
+    # Add the SDK's /usr/include directory to the CMake include paths
+    message(STATUS "Adding ${MACOSX_SDK_PATH}/usr/include to the include directories.")
+    include_directories(${MACOSX_SDK_PATH}/usr/include)
   endif()
-else()
-  find_package(Threads REQUIRED)
-  message(STATUS "Using pthreads for threading on non-Apple platforms.")
-  target_link_libraries(log PRIVATE Threads::Threads)
 endif()
 
+# Find and link the Threads library
+find_package(Threads REQUIRED)
+target_link_libraries(log PRIVATE Threads::Threads)
 
+# Log success if Threads library was linked
+message(STATUS "Threads library linked successfully.")
+
+# =========================== Logging Configuration ============================
+
+# Allow users to provide their own settings by defining LOGC__USER_SETTINGS
 add_compile_definitions(LOGC__USER_SETTINGS)
 
 # Enable color output by default; can be disabled by setting LOG_USE_COLOR to OFF
@@ -108,14 +134,15 @@ if(LOG_FILE_INFO)
   target_compile_definitions(log PRIVATE LOG_FILE_INFO)
 endif()
 
+# --- Set log output stream ---
 # Choice between stdout and stderr
 set(LOG_DEFAULT_STREAM "stderr" CACHE STRING "Default stream for log output (stdout/stderr)")
-
 # Validate value
 set_property(CACHE LOG_DEFAULT_STREAM PROPERTY STRINGS stdout stderr)
-
 # Expose as a macro
 target_compile_definitions(log PRIVATE LOG_DEFAULT_STREAM=${LOG_DEFAULT_STREAM})
+
+# ==================== Include Directories Configuration =======================
 
 # Include directories for the library
 # expose the given directories to anything linking against loglib
@@ -123,3 +150,35 @@ target_include_directories(log
   PUBLIC
   ${INCLUDE_DIR}
 )
+
+
+if(LOG_BUILD_SAMPLES)
+  add_executable(log_callbacks
+    ${SAMPLES_DIR}/callbacks/main.c
+  )
+
+  add_executable(log_multithreading
+    ${SAMPLES_DIR}/threading/main.c
+  )
+
+   add_executable(log_basic
+     ${SAMPLES_DIR}/basic/main.c
+   )
+
+  # create the BIN_DIR if it doesn't exist
+  file(MAKE_DIRECTORY ${BIN_DIR})
+
+  target_link_libraries(log_multithreading PRIVATE log)
+  target_link_libraries(log_callbacks PRIVATE log)
+  target_link_libraries(log_basic PRIVATE log)
+
+  set_target_properties(log_multithreading PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
+  )
+  set_target_properties(log_callbacks PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
+  )
+  set_target_properties(log_basic PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
+  )
+endif()
